--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@
 }
 
 .banner .content .model {
-    background-image: url(images/model.png);
+    background-image: url(model.png);
     width: 100%;
     height: 75vh;
     position: absolute;
